package com;

public interface MedioDeTransporte {
}
