package com;

public enum TipoDeCombustible {
  GNC, NAFTA, ELECTRICO, GASOIL
}
