package com;

public enum TipoDeVehiculo {
  MOTO, AUTO, CAMIONETA
}
